# ctypes-play

./: CMakeLists.txt  README.md  py-ctypes-examples.py  run.sh
include/: lib.h
python/: array.py
src/: lib.c
test/: cutest.h  test.c
